--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello PiedPiper
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <title>Hello world</title>
+  </head>
+  <body>
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph.</p>
+  </body>
+</html>
