--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
   <head>
-    <title>Hello world</title>
+    <title>青山学院大学PiedPiperプログラミング愛好会</title>
   </head>
   <body>
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
-    <p>©2019PiedPipers</p>
+    <h1>
+      <img src="">PiedPiper</img>
+    </h1>
+
+  <div class="menu-bar">
+    <a href="">ABOUT</a>
+    <a href="">JOIN US</a>
+    <a href="">ACTIVITY</a>
+    <a href="">CONTACT</a>
+  </div>
+  <div id="copyright">
+    <p>©2019青山学院大学PiedPiperプログラミング愛好会</p>
+  </div>
   </body>
 </html>
