--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>
-      <img src="">PiedPiper</img>
+      <a><img src="">PiedPiper</img></a>
     </h1>
 
   <div class="menu-bar">
@@ -13,6 +13,11 @@
     <a href="">JOIN US</a>
     <a href="">ACTIVITY</a>
     <a href="">CONTACT</a>
+  </div>
+  <div class="top-logo">
+    <p>PiedPiper</p>
+    <p>Aoyama Gakuin University</p>
+    <p>Programming Society</p>
   </div>
   <div id="copyright">
     <p>©2019青山学院大学PiedPiperプログラミング愛好会</p>
