--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>青山学院大学PiedPiperプログラミング愛好会</title>
+    <title>青学PiedPiperプログラミング</title>
   </head>
   <body>
     <h1>
