--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
   <body>
     <h1>
       <a><img src="">PiedPiper</img></a>
+      
+      <div class="menu-bar">
+        <ul>
+          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#joinus">JOIN US</a></li>
+          <li><a href="#activity">ACTIVITY</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+        </ul>
+        </div>
     </h1>
 
-  <div class="menu-bar">
-    <a href="">ABOUT</a>
-    <a href="">JOIN US</a>
-    <a href="">ACTIVITY</a>
-    <a href="">CONTACT</a>
-  </div>
+  
   <div class="top-logo">
     <p>PiedPiper</p>
     <p>Aoyama Gakuin University</p>
