--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>青学PiedPiperプログラミング</title>
   </head>
   <body>
+    <div class="Top">
     <h1>
       <a><img src="">PiedPiper</img></a>
-      
       <div class="menu-bar">
         <ul>
           <li><a href="#about">ABOUT</a></li>
@@ -16,6 +16,7 @@
         </ul>
         </div>
     </h1>
+    </div>
 
   
   <div class="top-logo">
