--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>青学PiedPiperプログラミング</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="Top">
@@ -17,6 +18,7 @@
         </div>
     </h1>
     </div>
+    <hr color="green">
 
   <div class="top-logo">
     <p>PiedPiper</p>
