test_top-container

--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="Top">
-    <h1>
-      <a><img src="">PiedPiper</img></a>
-      <div class="menu-bar">
-        <ul>
-          <li><a href="#about">ABOUT</a></li>
-          <li><a href="#joinus">JOIN US</a></li>
-          <li><a href="#activity">ACTIVITY</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+    <div class="top-container">
+      <div class="logo">
+          <!-- <img src="">-->
+          <img src="img/logo.png" alt="logo" class="logo-img">
+          <p><a href="#top" class="logo-piedpiper">PiedPiper</a></p>
+      </div>
+      
+        <ul class="menu-bar">
+          <li><a href="#about" class="menu-bar-word">ABOUT</a></li>
+          <li><a href="#joinus" class="menu-bar-word">JOIN US</a></li>
+          <li><a href="#activity" class="menu-bar-word">ACTIVITY</a></li>
+          <li><a href="#contact" class="menu-bar-word">CONTACT</a></li>
         </ul>
-        </div>
-    </h1>
     </div>
-    <hr color="green">
-
+<div class="main-container">
   <div class="top-logo">
     <p>PiedPiper</p>
     <p>Aoyama Gakuin University</p>
@@ -64,7 +64,7 @@
       <input type="submit" value="SEND">
     </form>
   </div>
-
+</div>>
   <div id="copyright">
     <p>©2019青山学院大学PiedPiperプログラミング愛好会</p>
     <!-- Noteへ -->
