--- a/index.html
+++ b/index.html
@@ -2,74 +2,80 @@
 <html>
   <head>
     <title>青学PiedPiperプログラミング</title>
+    <meta http-equiv="content-type" content="text/html" charset="UTF-8">
+    <meta http-equiv="content-language" content="ja">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="Top">
-    <h1>
-      <a><img src="">PiedPiper</img></a>
-      <div class="menu-bar">
-        <ul>
-          <li><a href="#about">ABOUT</a></li>
-          <li><a href="#joinus">JOIN US</a></li>
-          <li><a href="#activity">ACTIVITY</a></li>
-          <li><a href="#contact">CONTACT</a></li>
-        </ul>
+    <!--DMMのサイトのヘッダーを参照しました。-->
+    <div class="hd-main">
+      <div class="hd-main_left">
+        <div class="hd-main_menu_item">
+          <a class="hd-logo"><img src="">PiedPiper</a>
         </div>
-    </h1>
+      </div>
+      <div class="hd-main_right">
+        <ul class="hd-main_submenu">
+            <li class="hd-main_submenu_item"><a href="#about">ABOUT</a></li>
+            <li class="hd-main_submenu_item"><a href="#joinus">JOIN US</a></li>
+            <li class="hd-main_submenu_item"><a href="#activity">ACTIVITY</a></li>
+            <li class="hd-main_submenu_item"><a href="#contact">CONTACT</a></li>
+        </ul>
+      </div>
     </div>
+    <!--DMM参照終わり-->
+
     <hr color="green">
 
-  <div class="top-logo">
-    <p>PiedPiper</p>
-    <p>Aoyama Gakuin University</p>
-    <p>Programming Society</p>
-  </div>
+    <div class="content">
+      <div class="top-logo">
+        <p>PiedPiper</p>
+        <p>Aoyama Gakuin University</p>
+       <p>Programming Society</p>
+        scroll
+      </div>
+  
+      <div class="about">
+        <h3>ABOUT</h3>
+        <p>青山学院大学プログラミング愛好会です</p>
+        <p>青学生のテクノロジーへの理解を深め</p>
+        プログラミングの学習及び開発を行なっています</p>
+      </div>
 
-  <div>
-    scroll
-  </div>
+      <div class="activity">
+        <h3>ACTIVITY</h3>
+        <!-- ここでnote API導入 -->
+        <!-- more+ -->
+      </div>
 
-  <div class="about">
-    <h3>ABOUT</h3>
-    <p>青山学院大学プログラミング愛好会です</p>
-    <p>青学生のテクノロジーへの理解を深め</p>
-    <p>プログラミングの学習及び開発を行なっています</p>
-  </div>
-  <div class="activity">
-    <h3>ACTIVITY</h3>
-    <!-- ここでnote API導入 -->
-    <!-- more+ -->
-  </div>
-  <div class="joinus">
-    <h3>JOIN US</h3>
-    <p>PiedPiperは</p>
-    <p>初心者歓迎のサークルです</p>
+      <div class="join-us">
+        <h3>JOIN US</h3>
+        <p>PiedPiperは</p>
+        <p>初心者歓迎のサークルです</p>
+        <p>エンジニア志望の方は勿論、</p>
+        <p>起業・教育関係のお仕事を目指す方</p>
+        <p>ものづくりが好きな方</p>
+        <p>新しい時代を感じたい方</p>
+        <p>是非一度ご連絡ください</p>
+        <p>お待ちしています</p>
+        <!-- ツイッターへ -->
+      </div>
 
-    <p>エンジニア志望の方は勿論、</p>
-
-    <p>起業・教育関係のお仕事を目指す方</p>
-    <p>ものづくりが好きな方</p>
-    <p>新しい時代を感じたい方</p>
-
-    <p>是非一度ご連絡ください</p>
-    <p>お待ちしています</p>
-    <!-- ツイッターへ -->
-  </div>
-  <div class="contact">
-    <form action="#" method="post">
-      <input type="text" name="name" placeholder="Your Name"><br>
-      <input type="text" name="email" placeholder="Email Address"><br>
-      <textarea name="comment" id="contact" cols="30" rows="10" placeholder="Message"></textarea><br>
-      <input type="submit" value="SEND">
-    </form>
-  </div>
-
-  <div id="copyright">
-    <p>©2019青山学院大学PiedPiperプログラミング愛好会</p>
-    <!-- Noteへ -->
-    <!-- ツイッターへ -->
-  </div>
+      <div class="contact">
+        <form action="#" method="post">
+          <input type="text" name="name" placeholder="Your Name"><br>
+          <input type="text" name="email" placeholder="Email Address"><br>
+          <textarea name="comment" id="contact" cols="30" rows="10" placeholder="Message"></textarea><br>
+          <input type="submit" value="SEND">
+        </form>
+      </div>
+  
+      <div id="copyright">
+        <p>©2019青山学院大学PiedPiperプログラミング愛好会</p>
+        <!-- Noteへ -->
+        <!-- ツイッターへ -->
+      </div>
+  </div>    
 
   </body>
 </html>
