--- a/index.html
+++ b/index.html
@@ -8,74 +8,84 @@
   </head>
   <body>
     <!--DMMのサイトのヘッダーを参照しました。-->
-    <div class="hd-main">
-      <div class="hd-main_left">
-        <div class="hd-main_menu_item">
-          <a class="hd-logo"><img src="">PiedPiper</a>
+    <div class="container">
+      
+        <div class="hd-main">
+          <div class="hd-main_left">
+            <div class="hd-main_menu_item">
+              <a class="hd-logo"><img src="">PiedPiper</a>
+            </div>
+          </div>
+          <div class="hd-main_right">
+            <ul class="hd-main_submenu">
+                <li class="hd-main_submenu_item"><a href="#about">ABOUT</a></li>
+                <li class="hd-main_submenu_item"><a href="#joinus">JOIN US</a></li>
+                <li class="hd-main_submenu_item"><a href="#activity">ACTIVITY</a></li>
+                <li class="hd-main_submenu_item"><a href="#contact">CONTACT</a></li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <div class="hd-main_right">
-        <ul class="hd-main_submenu">
-            <li class="hd-main_submenu_item"><a href="#about">ABOUT</a></li>
-            <li class="hd-main_submenu_item"><a href="#joinus">JOIN US</a></li>
-            <li class="hd-main_submenu_item"><a href="#activity">ACTIVITY</a></li>
-            <li class="hd-main_submenu_item"><a href="#contact">CONTACT</a></li>
-        </ul>
-      </div>
+        <!--DMM参照終わり-->
+        
+      <div class="area">
+        <div class="content">
+          <div class="top-logo">
+            <p>PiedPiper</p>
+            <p>Aoyama Gakuin University</p>
+          <p>Programming Society</p>
+            scroll
+          </div>
+        </div>
+      </div>  
+
+      <div class="area">
+          <div class="about">
+            <h3>ABOUT</h3>
+            <p>青山学院大学プログラミング愛好会です</p>
+            <p>青学生のテクノロジーへの理解を深め</p>
+            プログラミングの学習及び開発を行なっています</p>
+          </div>
+     </div>
+
+     <div class="area">
+          <div class="activity">
+            <h3>ACTIVITY</h3>
+            <!-- ここでnote API導入 -->
+            <!-- more+ -->
+          </div>
+     </div>
+
+     <div class="area">
+         <div class="join-us">
+          <h3>JOIN US</h3>
+          <p>PiedPiperは</p>
+          <p>初心者歓迎のサークルです</p>
+          <p>エンジニア志望の方は勿論、</p>            
+          <p>起業・教育関係のお仕事を目指す方</p>
+          <p>ものづくりが好きな方</p>
+          <p>新しい時代を感じたい方</p>
+          <p>是非一度ご連絡ください</p>
+          <p>お待ちしています</p>
+            <!-- ツイッターへ -->
+        </div>
     </div>
-    <!--DMM参照終わり-->
 
-    <hr color="green">
-
-    <div class="content">
-      <div class="top-logo">
-        <p>PiedPiper</p>
-        <p>Aoyama Gakuin University</p>
-       <p>Programming Society</p>
-        scroll
-      </div>
-  
-      <div class="about">
-        <h3>ABOUT</h3>
-        <p>青山学院大学プログラミング愛好会です</p>
-        <p>青学生のテクノロジーへの理解を深め</p>
-        プログラミングの学習及び開発を行なっています</p>
-      </div>
-
-      <div class="activity">
-        <h3>ACTIVITY</h3>
-        <!-- ここでnote API導入 -->
-        <!-- more+ -->
-      </div>
-
-      <div class="join-us">
-        <h3>JOIN US</h3>
-        <p>PiedPiperは</p>
-        <p>初心者歓迎のサークルです</p>
-        <p>エンジニア志望の方は勿論、</p>
-        <p>起業・教育関係のお仕事を目指す方</p>
-        <p>ものづくりが好きな方</p>
-        <p>新しい時代を感じたい方</p>
-        <p>是非一度ご連絡ください</p>
-        <p>お待ちしています</p>
-        <!-- ツイッターへ -->
-      </div>
-
-      <div class="contact">
-        <form action="#" method="post">
-          <input type="text" name="name" placeholder="Your Name"><br>
-          <input type="text" name="email" placeholder="Email Address"><br>
-          <textarea name="comment" id="contact" cols="30" rows="10" placeholder="Message"></textarea><br>
-          <input type="submit" value="SEND">
-        </form>
-      </div>
-  
-      <div id="copyright">
-        <p>©2019青山学院大学PiedPiperプログラミング愛好会</p>
-        <!-- Noteへ -->
-        <!-- ツイッターへ -->
-      </div>
-  </div>    
-
+    <div class="area">
+        <div class="contact">
+           <form action="#" method="post">
+            <input type="text" name="name" placeholder="Your Name"><br>
+            <input type="text" name="email" placeholder="Email Address"><br>
+            <textarea name="comment" id="contact" cols="30" rows="10" placeholder="Message"></textarea><br>
+            <input type="submit" value="SEND">
+            </form>
+        </div>
+    </div>
+          <div id="copyright">
+            <p>©2019青山学院大学PiedPiperプログラミング愛好会</p>
+            <!-- Noteへ -->
+            <!-- ツイッターへ -->
+          </div>
+      </div>    
+    </div>
   </body>
 </html>
